3822B1PE1/3_naive_gemm_omp/korablev_vladlen/log.txt
/home/crazyproger/sandbox/gpu-2025/3822B1PE1/3_naive_gemm_omp/korablev_vladlen/naive_gemm_omp.cpp: In function ‘std::vector<float> NaiveGemmOMP(const std::vector<float>&, const std::vector<float>&, int)’:
/home/crazyproger/sandbox/gpu-2025/3822B1PE1/3_naive_gemm_omp/korablev_vladlen/naive_gemm_omp.cpp:11:33: error: ‘size_t’ does not name a type
   11 |     if (a.size() != static_cast<size_t>(n * n) ||
      |                                 ^~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1PE1/3_naive_gemm_omp/korablev_vladlen/naive_gemm_omp.cpp:7:1: note: ‘size_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
    6 | #include <omp.h>
  +++ |+#include <cstddef>
    7 | 
/home/crazyproger/sandbox/gpu-2025/3822B1PE1/3_naive_gemm_omp/korablev_vladlen/naive_gemm_omp.cpp:12:33: error: ‘size_t’ does not name a type
   12 |         b.size() != static_cast<size_t>(n * n)) {
      |                                 ^~~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1PE1/3_naive_gemm_omp/korablev_vladlen/naive_gemm_omp.cpp:12:33: note: ‘size_t’ is defined in header ‘<cstddef>’; did you forget to ‘#include <cstddef>’?
